--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,6 +3,7 @@ header{
     padding: 0px;
     height: 100%;
     background-color: #0E0C10;
+    color: #9AA0A6;
     font-family: "Righteous";
  }
 
