--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -11,7 +11,13 @@ body{
    font-family: "Righteous";
 }
 
-
+/* header{
+   margin: 0px;
+   padding: 0px;
+   height: 100%;
+   background-color: #0E0C10;
+   font-family: "Righteous";
+} */
 
 .cat-btn{
    width: 100px;
