--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,8 +1,6 @@
-.article{
+/* .article{
    height: 400px;
    width: 1500px;
-   margin-top: 20px;
-   margin-bottom: 20px;
    border: solid 1px;
 }
 
@@ -10,4 +8,4 @@
    display: flex;
    justify-content: space-around;
    align-items: column;
-}
+} */
