--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,4 +1,8 @@
-body{
+body {
     background-color: #202124;
     color: #9AA0A6;
+    font-family: 'Arial', sans-serif;
+    margin: 0; 
+    padding: 0; 
+    line-height: 1.6; 
 }
