--- a/assets/css/ajout.css
+++ b/assets/css/ajout.css
@@ -1,4 +1,14 @@
-html{
+html {
+    box-sizing: border-box;
+    font-size: 16px;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial', sans-serif;
     background-color: #202124;
     color: #9AA0A6;
+    line-height: 1.6;
 }
+
