--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -1,4 +1,24 @@
-html{
+html {
+    box-sizing: border-box;
+    font-size: 16px;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial', sans-serif;
     background-color: #202124;
     color: #9AA0A6;
+    line-height: 1.6;
+}
+
+
+a {
+    color: #4CAF50;
+    text-decoration: none;
+    transition: color 0.3s ease-in-out;
+}
+
+a:hover {
+    color: #45a049;
 }
