--- a/assets/css/error404.css
+++ b/assets/css/error404.css
@@ -1,4 +1,19 @@
-html{
+html {
+    box-sizing: border-box;
+    font-size: 16px;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial', sans-serif;
     background-color: #202124;
     color: #9AA0A6;
+    line-height: 1.6;
+    background-image: url('404.jpg');
+    background-size: cover; 
+    background-position: center;
+    background-repeat: no-repeat; 
 }
+
+
