--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5,35 +5,17 @@
 
 :root {
   --font-Righteous: "Righteous";
-
-  /* --main-bg-color: #0e0c10; */
-  /* --hover-bg-color: #2f3747; */
-
   --main-font-color: aliceblue;
-
-  /* --header-height: 100px; */
 }
 
-
-/* 
-.main{
-    font-family: var(--font-Righteous);
-    color: var(--main-font-color);
-    background-image: url(../img/abstract-technological-background_23-2148897676.png);
-    background-size: cover;
-    margin-top: var(--header-height);
+*{
+  font-family: "Righteous";
 }
-*/
 
 html {
-  /* background-image: url(../img/abstract-technological-background_23-2148897676.png); */
-
   background-color: #292929;
   background-image: linear-gradient(0deg, #292929 1%, #7f7f7f 100%);
-
   background-size: cover;
-  /* height: 100vh;
-    width: 100vw; */
   font-family: var(--font-Righteous);
 }
 
