--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,6 +14,9 @@
    margin: 5px;
    background-color: #fff;
 } */
+*{
+   text-decoration:none;
+}
 
 .article{
    height: 200px;
@@ -25,6 +28,7 @@
    color: black;
    align-items: center;
    overflow: clip;
+
 }
 
 .article-img{
@@ -32,6 +36,7 @@
    height: 180px;
    object-fit: cover;
    padding-left: 10px;
+
 }
 
 .article-text{
@@ -39,6 +44,7 @@
    flex-direction: column;
    justify-content: center;
    padding: 0 10px;
+
 }
 
 .article-title{
@@ -55,10 +61,12 @@
    margin: 5px;
    background-color: #3b3b3b;
    color: aliceblue;
+
 }
 
 .content{
    display: flex;
+
 }
 .sidebar-left{
    display: flex;
