--- a/assets/css/ajout.css
+++ b/assets/css/ajout.css
@@ -1,14 +1,63 @@
-html {
-    box-sizing: border-box;
-    font-size: 16px;
+*{
+    text-decoration:none;
+ }
+ 
+.content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 80vw;
+    height: 80vh;
+    overflow: clip;
+    margin: 5px;
+    background-color: #3b3b3b;
+    color: aliceblue;
+    border-radius: 20px;
 }
 
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Arial', sans-serif;
-    background-color: #202124;
-    color: #9AA0A6;
-    line-height: 1.6;
+.main{
+    display: flex;
+    justify-content: center;
 }
 
+.form{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 50vw;
+}
+
+.form-txt{
+    margin: 20px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.form-txt-ctn{
+    height: 200px;
+    margin: 20px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.form-file{
+    display: flex;
+    flex-direction: column ;
+    justify-content: center;
+    margin: 20px;
+    
+}
+
+.form-submit{
+    border-radius: 100px;
+    border: solid 2px;
+    height: 70px;
+    padding: 10px;
+    margin: 20px;
+    font-size: 1.5em;
+    color :aliceblue;
+    background-color: #7f7f7f;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
