--- a/assets/css/error404.css
+++ b/assets/css/error404.css
@@ -1,19 +1,40 @@
+
+
+@font-face {
+    font-family: "Righteous";
+    src: url(../font/Righteous-Regular.ttf);
+  }
+
+
+*{
+   text-decoration:none;
+   font-family: "Righteous";
+}
+
 html {
-    box-sizing: border-box;
-    font-size: 16px;
+    background-color: #292929;
+    background-image: linear-gradient(0deg, #292929 1%, #7f7f7f 100%);
+    background-size:auto;
 }
 
-body {
+body{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0;
-    padding: 0;
-    font-family: 'Arial', sans-serif;
-    background-color: #202124;
-    color: #9AA0A6;
-    line-height: 1.6;
-    background-image: url('/static/img/404.jpg');
-    background-size: cover; 
-    background-position: center;
-    background-repeat: no-repeat; 
 }
 
-
+.error-404{
+    flex-direction: column;
+    padding: 20px;  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.code{
+    font-size: 4em;
+}
+.error-message{
+    font-size: 2em;
+}
