--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -162,8 +162,8 @@ footer {
 .searchButton{
     color: white;
     float: right;
-    /* width: 40px;
-    height: 40px; */
+    width: 40px;
+    height: 40px;
     height: 100%;
     border-radius: 50%;
     background: #2f3640;
