--- a/assets/css/ajout.css
+++ b/assets/css/ajout.css
@@ -2,6 +2,11 @@
     text-decoration:none;
  }
  
+ html {
+    box-sizing: border-box;
+    font-size: 16px;
+}
+ 
 .content{
     display: flex;
     flex-direction: column;
@@ -18,6 +23,7 @@
 .main{
     display: flex;
     justify-content: center;
+    height: 100%;
 }
 
 .form{
@@ -44,8 +50,8 @@
     display: flex;
     flex-direction: column ;
     justify-content: center;
-    margin: 20px;
-    
+    margin: 15px;
+    padding: 10px;
 }
 
 .form-submit{
