--- a/assets/css/mentionslegales.css
+++ b/assets/css/mentionslegales.css
@@ -1,4 +1,27 @@
-html{
-    background-color: #202124;
-    color: #9AA0A6;
+@font-face {
+    font-family: "Righteous";
+    src: url(../font/Righteous-Regular.ttf);
+  }
+
+
+*{
+   text-decoration:none;
+   font-family: "Righteous";
+}
+
+html {
+    background-color: #292929;
+    background-image: linear-gradient(0deg, #292929 1%, #7f7f7f 100%);
+    background-size:auto;
+}
+
+body{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
+.men{
+    padding: 20px;
 }
