--- a/assets/css/recherche.css
+++ b/assets/css/recherche.css
@@ -1,4 +1,61 @@
-html{
-    background-color: #202124;
-    color: #9AA0A6;
-}
+*{
+    text-decoration:none;
+ }
+
+ .main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 80vw;
+    overflow: clip;
+    margin: 5px;
+    background-color: #3b3b3b;
+    color: aliceblue;
+    border-radius: 20px;
+ }
+
+ .article{
+    height: 200px;
+    margin: 20px;
+    border: solid 1px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    overflow: clip;
+    background-color: #fff;
+    color: black;
+ }
+ 
+ .article-img{
+    width: 180px;
+    height: 180px;
+    object-fit: cover;
+    padding-left: 10px;
+    border-radius: 20px;
+ }
+ 
+ .article-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 10px;
+    overflow-wrap: normal;
+ }
+ 
+ .article-title{
+    overflow-wrap: normal;
+ }
+
+ .content{
+    display: flex;
+ }
+ .sidebar-left{
+    display: flex;
+    width: 15vw;
+    align-items: center;
+ }
+ .sidebar-right{
+    display: flex;
+    width: 15vw;
+    align-items: center;
+ }
